removed the argument from the bundle and passed it with generate class from safeargs

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,7 +26,6 @@
             app:destination="@id/FirstFragment" />
         <argument
             android:name="myArg"
-            app:argType="integer"
-            android:defaultValue="0" />
+            app:argType="integer" />
     </fragment>
 </navigation>
